--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gqlGl32122",
+  "name": "gqlgl32122",
   "version": "1.0.0",
-  "description": "",
+  "description": "tp",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "graphql-yoga": "^1.18.3",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "uuid": "^8.3.2"
   }
 }
